tests/NormalTests/paczka1/fuzzy1/45283129.err
Error in line 9: gPdE4X8hf S992 54,52
Error in line 11: YBnCd3oda A681 26,2
Error in line 15: YBnCd3oda S61 54,5
Error in line 4: S61 S992 64,4
